Ensure excerpt gets cut off if too long to fit

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -5,12 +5,13 @@ body {
 .post-preview {
   border-radius: 6px;
   border: 5px solid #333;
-  padding: 47px 30px 30px;
+  padding: 47px 30px 20px;
   font-family: serif;
-  display: block;
   width: 250px;
-  height: 400px;
+  height: 350px;
   color: #333;
+  display: flex;
+  flex-direction: column;
 }
 .post-preview:visited {
   color: #333;
@@ -19,16 +20,45 @@ body {
   text-decoration: none;
 }
 
+.post-preview-summary {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 100%;
+}
+
 .post-preview-title {
   font-family: 'kepler-std-display', serif;
   line-height: 1;
   font-size: 30px;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: auto;
 }
 .post-preview-excerpt {
   font-family: 'kepler-std', serif;
   line-height: 1.25;
   font-size: 20px;
-  text-overflow: ellipsis;
+  overflow-y: hidden;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
+  position: relative;
+  margin-bottom: 0;
+}
+.post-preview-excerpt::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 20px;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  pointer-events: none;
+  background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+  background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
+  background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
 }
 
 .post-preview-next {
